fix: more cleanup (#32)